# cpp-vcpkg

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
src/: application.cpp  application.h  imgui_demo.cpp  main.cpp  ui_overlay.cpp  ui_overlay.hpp  widget.cpp  widget.h
